cmake_minimum_required(VERSION 3.7.0)

set(PROJECT CppCanParser)

project(${PROJECT})

file(GLOB_RECURSE PROJECT_SRC_RECURSE 
	${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src PREFIX src FILES ${PROJECT_SRC_RECURSE})

add_library(${PROJECT} STATIC ${PROJECT_SRC_RECURSE})

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)